[project]
name = "sde-solver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.3.0",
    "numpy>=1.20.0",
    "pyqt6>=6.9.1",
]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"


[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.0",
]
